typescript/checker/tests/conformance/es6/Symbols/symbolProperty58.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            94,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty58.ts:7:6
  |
7 |     [Symbol.foo]: 0
  |      ^^^^^^

